# file_tagger

./: .gitignore  README.md  ai_service.py  api_settings.py  check_status.py  check_vector_search.py  config.py  debug_vector_search.py  file_tag_manager.py  file_tags.db  force_reindex_file.py  initialization.py  login.py  main.py  models.py  password_management.py  pyproject.toml  requirements.txt  search.py  tag_suggestion.py  utils.py  vector_search.py
.chroma/5d0de0ff-c976-4aa3-8c57-f0a0e771f10d/: index_metadata.pickle
.chroma/79048b2e-8a24-44b9-9447-c9c782d4a36d/: index_metadata.pickle
.chroma/a989574e-0d91-4597-8cb1-2094aeb1eb33/: index_metadata.pickle
src/file_tagger/: __init__.py  main.py  models.py
vector_search/: __init__.py  content_extractor.py  document_chunker.py  search_utils.py  vector_search.py
