[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file_tagger"
version = "0.1.0"
description = "A file management application with tagging capabilities"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.4.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
file-tagger = "file_tagger.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/file_tagger"]